make all section titles bold

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -130,3 +130,7 @@
 
 % table: row distance
 \renewcommand\arraystretch{1.25} % default : 1.0
+
+\makeatletter
+\g@addto@macro\bfseries{\boldmath}
+\makeatother
