--- a/tex/results.tex
+++ b/tex/results.tex
@@ -3,19 +3,22 @@
 
 This section presents the unfolded \ac{} measurements at \seventev{}
 and \eighttev{}, both inclusive and differential in bins of \mtt{},
-\pttt{} and \ytt{}. The results from data at \seventev{} have been
-published on the Journal of High Energy Physics~\cite{Aad:2013cea},
-while the \eighttev{} ones are internal results reported here for the
-purpose of this thesis. The corresponding publication results are
-being finalized and are expected before the end of 2014.
+\pttt{} and \ytt{}. The measurements at \seventev{} have been
+published~\cite{Aad:2013cea}, while the measurements at \eighttev{}
+are internal results reported here for the purpose of this
+dissertation. The corresponding publication results are being
+finalized and are expected before the end of 2014. The results are
+compared with the corresponding measurements from CMS, and the
+results of the combination between ATLAS and CMS inclusive
+measurements at \seventev{} are summarized.
 
 \section{\ac{} measurements at \seventev{}}
 \label{sec:res7tev}
 
-The measurements are performed in the $\ell{}+\ge4$ jets sample with at least 1
-$b$--jet. The observed \dy{} distribution in data and the background
-predictions used as input for the inclusive measurement is shown in
-Fig.~\ref{fig:dy7tev}.
+The measurements are performed in the $\ell{}+\ge4$ jets sample with
+at least 1 $b$--jet. The observed \dy{} distribution in data and the
+background predictions used as input for the inclusive measurement is
+shown in Fig.~\ref{fig:dy7tev}.
 
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/dy7tev} 
@@ -26,8 +29,8 @@ Fig.~\ref{fig:dy7tev}.
   \label{fig:dy7tev}
 \end{figure}
 
-The asymmetry \ac{} in \ttbar{} production at \seventev{} is measured to be
-$\ac{}= 0.006\pm0.010$, compatible with the SM prediction
+The inclusive \ac{} in \ttbar{} production at \seventev{} is measured to be
+$\ac{}= 0.006\pm0.010(stat.+syst.)$, compatible with the SM prediction,
 $\ac{}=0.0123\pm0.0005$ (see Sec.~\ref{sec:topca}).
 Table~\ref{tab:results} summarizes the
 measurements and predictions for the inclusive asymmetry, at high
@@ -44,14 +47,15 @@ statistical and systematic components.
   & Data & Theory\\
 \midrule
  \ac{}                                     & $0.006\pm0.010$ & $0.0123\pm0.0005$ \\
- $\ac{}(\mtt{} > 600 \GeV{})$ & $0.018\pm0.022$ & $0.0175^{+0.0005}_{-0.0004}$\\
  $\ac{}(\beta_{z,\ttbar}>0.6)$   & $0.011\pm0.018$ & $0.020^{+0.006}_{-0.007}$\\
+ $\ac{}(\mtt{} > 600 \GeV{})$ & $0.018\pm0.022$ & $0.0175^{+0.0005}_{-0.0004}$\\
 \bottomrule
 \end{tabular}
-\caption{Measured charge asymmetry \ac{} compared with SM
+\caption{Measured inclusive \ac{} compared with SM
   predictions. The measurements with the \qqbar{}--enhancing
   $\beta_{z,\ttbar} > 0.6$ requirement and at high \ttbar{} invariant
-  mass $\mtt{} > 600 \GeV{}$ are also included.}
+  mass $\mtt{} > 600 \GeV{}$ are also included. The uncertainties
+  include statistical and systematic components.}
 \label{tab:results}
 \end{table}
 
@@ -61,13 +65,13 @@ marginalization.
 For each source of uncertainty, the background templates and
 response matrix corresponding to $\pm1\sigma$ variation are
 considered. 
-Table~\ref{tab:systematics} shows the average asymmetry variations in the
-asymmetry computed, for each source of uncertainty, as
+Table~\ref{tab:systematics} shows the average asymmetry variations
+$\delta\ac{}$ computed, for each source of uncertainty, as
 $|\ac{}(+1\sigma)-\ac{}(-1\sigma)|/2$. 
-While the precision is dominated by the statistical uncertainty, the
-sources of largest systematic uncertainties are the ones with a large
+While the precision is dominated by the statistical uncertainty, the main
+sources of systematic uncertainty are the ones with a large
 impact on the size of the \wjets{} background, such as the
-uncertainty on the energy scale and resolution of lepton and jets. 
+uncertainty on the jet energy scale and resolution. 
 
 \begin{table}[!htb]\centering
 \begin{tabular}{l c c c}
@@ -94,26 +98,27 @@ $W$+jets normalisation and shape     & $0.002$  & $<0.002$ & $<0.002$\\
 Statistical uncertainty                          & $0.010$ & $0.021$ & $0.017$\\
 \bottomrule
 \end{tabular}
-\caption{Impact of individual sources of uncertainty on the measured
-  \ac{} and \mbox{$\ac{}(\mtt{}>600 \GeV{})$}. Variations below $10\%$ of the
-  statistical uncertainty, quoted as $<0.001$ and $<0.002$, are
-  considered negligible.}
+\caption{Impact of individual sources of uncertainty on the inclusive
+  \ac{}, \mbox{$\ac{}(\betatt{}>0.6)$} and \mbox{$\ac{}(\mtt{}>600
+    \GeV{})$} at \seventev{}. Variations below $10\%$ of the
+  statistical uncertainty, quoted as ``$<0.001$'' and ``$<0.002$'',
+  are considered negligible.}
 \label{tab:systematics}
 \end{table}
 
-The asymmetry spectra, measured as functions of
+The \ac{} differential measurements as functions of
 \mtt{}, \pttt{} and \ytt{} are compared in Fig.~\ref{fig:unfac_diff}
-with the theoretical SM predictions and found to be compatible. 
+with the SM predictions and found to be consistent. 
 In addition, the results are compared with new physics predictions for
-color octets ({\it axigluons}) with masses $300 \GeV{}$ and $7
+color octets ({\it axigluons}) with masses of $m=300 \GeV{}$ and $7
 \TeV{}$~\cite{AguilarSaavedra:2011ci}. Both models would not
 be observable in direct searches as \ttbar{} resonances: the light
-axigluon mass is below the threshold for production of \ttbar{}
-pairs, while a $7 \TeV$ mass is beyond the kinematic reach of the
-current searches at \seventev{} and \eighttev{}. In both scenarios
-the new physics couplings with top and light quarks are tuned to yield a
+axigluon mass is below the threshold for \ttbar{} production, while
+the one of $m=7 \TeV$ is beyond the kinematic reach of the current LHC
+searches at \seventev{} and \eighttev{}. In both scenarios the new
+physics couplings with top and light quarks are tuned to yield a
 forward--backward asymmetry compatible with the results reported by
-Tevatron experiments. 
+Tevatron experiments.
 The \ac{} spectrum as a function of the \ttbar{} invariant mass \mtt{}
 with the additional requirement on the $z$--component of high velocity
 of the \ttbar{} system, $\betatt{}>0.6$, is also shown in
@@ -136,21 +141,43 @@ predictions.
     7000 GeV (blue lines) 
     as functions of \mtt{} (a), \pttt{} (b) and \ytt{} (c). The
     asymmetry as a function of \mtt{} with $\betatt{}>0.6$ is also
-    shown (d).}
+    shown (d). The uncertainties include statistical and systematic
+    components.}
   \label{fig:unfac_diff}
 \end{figure}
 The asymmetry values corresponding to the spectra in
 Fig.~\ref{fig:unfac_diff} are detailed in
-Tables~\ref{tab:results_mtt},~\ref{tab:results_pttt},~\ref{tab:results_ytt},
-and ~\ref{tab:results_mtt_beta}.
+Table~\ref{tab:results7tev}.
 \input{tex/results_table7tev.tex}
-The correlation of the asymmetry values $\ac{}^i$ across differential bins is
-fully described by the posterior probability density
-$\conditionalProb{\ac{}^1,...,\ac{}^N}{\Data{}}$, where
-$N$ is the number of differential bins, and it is summarized in
-App.~\ref{app:correlations}.
+The correlation of the asymmetry values $\ac{}^i$ across differential
+bins is fully described by the posterior probability density
+$\conditionalProb{\ac{}^1,...,\ac{}^N}{\Data{}}$, where $N$ is the
+number of differential bins. Table~\ref{tab:corr_mtt} shows the
+correlation coefficients $\rho_{ij}$ for the differential \ac{}
+measurement as a function of \mtt{}.
+\begin{table}[!htp]\centering
+\begin{tabular}{l c c c c c }
+  \toprule
+  &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$}    \\
+  $\rho_{ij}$ & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $>750$ \\
+  \midrule
+  $0$--$420$      & $1$ & $-0.38$ & $0.13$  & $-0.05$ & $0.01$  \\
+  $420$--$500$    &     & $1$     & $-0.53$ & $0.17$  & $-0.03$ \\
+  $500$--$600$    &     &         & $1$     & $-0.54$ & $0.14$  \\
+  $600$--$750$    &     &         &         & $1$     & $-0.43$ \\
+  $>750$          &     &         &         &         & $1$     \\
+  \bottomrule
+\end{tabular}
+\label{tab:corr_mtt}
+\caption{Measured \ac{} values as a function of \mtt{} at
+  \seventev{}. The uncertainties include both statistical and
+  systematic components. The SM predictions
+  are also reported.}
+\end{table}
+The corresponding tables for the other differential measurements are
+collected in App.~\ref{app:correlations}.
 
-\subsection{LHC results: ATLAS and CMS}
+\subsection{Comparison of ATLAS and CMS results}
 
 Analogous measurements of the asymmetry \ac{} at \seventev{} have been
 performed by the CMS collaboration~\cite{Chatrchyan:2012cxa}, who
@@ -160,9 +187,9 @@ The results are compatible with the SM predictions and with the
 measurements presented in this thesis. 
 With about 46000 \ttbar{} events, CMS sample has a similar size to the
 ATLAS one ($\sim50000$ events); thus the statistical uncertainties are
-of similar size. On the other hand CMS systematic uncertainties are
-significantly larger, due to the impact of the signal modeling used in the
-unfolding algorithm (SVD).
+of similar size. On the other hand systematic uncertainties in the CMS
+measurement are significantly larger, due to the impact of the signal
+modeling used in the unfolding algorithm (SVD).
 
 The ATLAS and CMS inclusive \ac{} results are combined in order to
 obtain a more precise measurement~\cite{ATLAS-CONF-2014-012}. The
@@ -171,14 +198,15 @@ combination is performed using the Best Linear Unbiased Estimate
 systematic uncertainties is taken into account. In particular, signal
 modeling and PDF uncertainties are considered fully correlated between
 ATLAS and CMS results, while a 50\% correlation is assigned to the
-\wjets{} normalization uncertainty. All uncertainties related with the
-detector description are instead considered not correlated. Since the
-ATLAS results is dominated by the statistical uncertainty
-(uncorrelated), the combined results is insensitive to variations of
-these choices. The combined result is found to be
-$0.005\pm0.007(stat.)\pm0.006(syst.)$, compatible with the SM
-prediction. The comparison between values of \ac{} as measured by
-ATLAS and CMS, and from the combination of the, is shown in
+\wjets{} normalization uncertainty, as data (uncorrelated) and
+simulation (correlated) are both used to estimate the this
+background. All uncertainties related with the detector description
+are instead considered not correlated. Since the ATLAS results is
+dominated by the statistical uncertainty (uncorrelated), the combined
+results is insensitive to variations of these choices. The combined
+result is found to be $0.005\pm0.007(stat.)\pm0.006(syst.)$,
+compatible with the SM prediction. The comparison between values of
+\ac{} as measured by ATLAS and CMS, and their combination is shown in
 Fig.~\ref{fig:combineac}.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.45\textwidth]{figures/results/combineac7tev} 
@@ -191,19 +219,20 @@ Fig.~\ref{fig:combineac}.
   \label{fig:combineac}
 \end{figure}
 The combination of the differential measurements is not possible, as a
-different number and width of differential bin has been used by the
-two Collaborations.
+different binning has been used in each case.
 
 \subsection{Interpretation}
 
-A comparison of the inclusive \ac{} measurements, together with the Tevatron
-\afb{} ones, with predictions from a broad range of new physics model
+A comparison of \ac{} measurements at the LHC and \afb{} measurements
+at the Tevatron with predictions from a broad range of new physics models
 (see Sec.~\ref{sec:bsmca}) is shown in Fig.~\ref{fig:summarybsm}. The
 \ac{} and \afb{} measurements, inclusive and at high \mtt{} mass,
 define a region where the new physics prediction are compatible with
 the current measurements from both Tevatron and LHC experiments.
 Some models show only a limited range of parameter values which yield
-acceptable asymmetries.
+acceptable asymmetries. The wider spread of \ac{} values highlights
+the discrimination power of measurements at high \mtt{} and the
+important complementarity of \ac{} and \afb{}. 
 
 \begin{figure}[!htb]
   \centering
@@ -226,19 +255,20 @@ acceptable asymmetries.
 \section{\ac{} measurements at \eighttev{}}
 \label{sec:res8tev}
 
-The measurements at \eighttev{} are performed using six sub-samples of
-$\ell{}+\ge4$ jets events, where, simultaneously, the background
-normalizations are fitted and the parton--level \dy{} distribution is
-estimated. Fig.~\ref{fig:dy7tev} shows the fitted distribution used
-for the inclusive \ac{} measurement compared with the observed one. 
+As discussed in Sec.~\ref{sec:wjets}, the measurements at \eighttev{}
+are performed using six sub-samples of $\ell{}+\ge4$ jets events,
+where, simultaneously, the background normalizations are fitted and
+the parton--level \dy{} distribution is
+estimated. Figure~\ref{fig:dy8tev} shows the fitted distribution used
+for the inclusive \ac{} measurement compared with the observed one.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/datamcinclu8TeV_postfit} 
   \caption{}
-  \label{fig:dy7tev}
+  \label{fig:dy8tev}
 \end{figure}
-The asymmetry \ac{} in \ttbar{} production at \eighttev{} is measured to be
-$\ac{}= 0.011\pm0.005$, compatible with the SM prediction
-$\ac{}=0.0111\pm0.0004$.
+The inclusive \ac{} in \ttbar{} production at \eighttev{} is measured to be
+$\ac{}= 0.011\pm0.006(stat.+syst.)$, compatible with the SM prediction,
+$\ac{}=0.0111\pm0.0004$. 
 
 Since the background estimation is part of the bayesian inference
 procedure described in Sec.~\ref{sec:unfolding}, it's not possible to
@@ -272,20 +302,21 @@ Missing transverse momentum and pile--up modeling& $<0.0005$\\
 Multi--jets background normalization & $<0.0005$\\
 Other backgrounds normalization        & $<0.0005$\\
 $b$--tagging/mis--tag efficiency       & $<0.0005$\\
-Signal modeling                                    & $0.004$\\
+Signal modeling                                    & $0.0032$\\
 Parton shower/hadronization                & $0.0008$\\
 Monte Carlo statistics                            & $0.0008$\\
-PDF                                                        &$0.0006$\\
+PDF                                                        &$0.0005$\\
 Unfolding response                               &$<0.0005$\\
 \midrule
 Statistical uncertainty                           & $0.005$ \\
 \midrule
-Total uncertainty                                   & $0.005$ \\
+Total uncertainty                                   & $0.006$ \\
 \bottomrule
 \end{tabular}
-\caption{Expected impact of individual sources of uncertainty on the
-  measured \ac{}. Variations below $10\%$ of the
-  statistical uncertainty are quoted as $<0.0005$ and considered negligible.}
+\caption{
+  Impact of individual sources of uncertainty on the inclusive
+  \ac{} at \eighttev{}. Variations below $10\%$ of the statistical
+  uncertainty are quoted as ``$<0.0005$'' and considered negligible.}
 \label{tab:8tevsystematics}
 \end{table}
 
@@ -296,26 +327,29 @@ physics predictions for color octets with low and high
 masses~\cite{Aguilar-Saavedra:2014nja}.
 \begin{figure}[!htb]\centering
   \includegraphics[width=0.6\textwidth]{figures/results/acvsmtt8tev}
-  \caption{Measured \ac{} spectrum as a function of \mtt{} compared with SM prediction.}
+  \caption{Measured \ac{} spectrum as a function of \mtt{} at
+    \seventev{} compared with predictions for SM (green lines) and for right--handed
+    color octets with masses below the \ttbar{} threshold (red lines) and beyond
+    the kinematic reach of current LHC searches (blue line).}
   \label{fig:8tevacvsmtt}
 \end{figure}
 The \ac{} values are summarized in Table~\ref{tab:results_mtt_8tev}.
 \input{tex/results_table8tev.tex}
 
-\subsection{LHC results: ATLAS and CMS}
+\subsection{Comparison of ATLAS and CMS results}
 
 Preliminary results at \eighttev{} from the CMS
 collaboration~\cite{CMS-PAS-TOP-12-033} include the measurement of
 \ac{}, inclusively and as a function of \mtt{}, \pttt{} and \ytt{}.
 The reported inclusive asymmetry
 $\ac{}=0.005\pm0.007(stat.)\pm0.006(syst.)$ is compatible with the SM
-predictions and with the measurement presented in this thesis. Both
+predictions and with the measurement presented in this dissertation
+with a total uncertainty about twice as large. Both
 statistical and systematic uncertainties are larger than the ones
 reported in this work. The statistical precision is presumably
 degraded by the use of a large number of \dy{} bins in the unfolding
 procedure, while the larger impact of all systematic components
 points to a less precise background estimation.
-
 
 %The asymmetry values corresponding to the spectra in
 %Fig.~\ref{fig:8tevacvsmtt} are detailed in
