--- a/tex/results_table8tev.tex
+++ b/tex/results_table8tev.tex
@@ -5,11 +5,14 @@
   &\multicolumn{6}{c}{$\mtt{}~[\rm{GeV}]$}    \\
   \ac{} & $0$--$420$ & $420$--$500$ & $500$--$600$ & $600$--$750$ & $750$--$900$ & $>900$ \\
   \midrule
-  Data & $0.020\pm0.0265$ & $-0.008\pm0.018$ & $0.024\pm0.020$ & $0.008\pm0.025$ & $-0.01\pm0.05$ & $0.08\pm0.04$\\
+  Data & $0.03\pm0.04$ & $-0.009\pm0.019$ & $0.027\pm0.021$ & $0.007\pm0.029$ & $-0.01\pm0.05$ & $0.08\pm0.09$\\
   Theory & $0.0081^{+0.0003}_{-0.0004}$ & $0.0112\pm0.0005$ & $0.0114^{+0.0003}_{-0.0004}$ & $0.0134^{+0.0003}_{-0.0005}$ & $0.0167^{+0.0005}_{-0.0006}$ & $0.02100^{+0.00032}_{-0.00018}$ \\
   \bottomrule
 \end{tabular}
 }
-\caption{ }
 \label{tab:results_mtt_8tev}
+\caption{Measured \ac{} values as a function of \mtt{} at
+  \eighttev{}. The uncertainties include both statistical and
+  systematic components. The SM predictions
+  are also reported.}
 \end{table}
