--- a/tex/results_table7tev.tex
+++ b/tex/results_table7tev.tex
@@ -1,4 +1,5 @@
 \begin{table}[!htp]\centering
+\scalebox{0.8}{
 \begin{tabular}{l c c c c c }
   \toprule
   &\multicolumn{5}{c}{$\mtt{}~[\rm{GeV}]$}    \\
@@ -11,6 +12,7 @@
   Theory, $\betatt{}>0.6$ & $0.0145^{+0.0005}_{-0.0003}$ & $0.0213^{+0.0006}_{-0.0005}$ & $0.0240^{+0.0003}_{-0.0009}$ & $0.0280^{+0.0012}_{-0.0007}$ & $0.0607 \pm 0.0002$ \\
   \bottomrule
 \end{tabular}
+}
 \begin{tabular}{l c c c }
   \toprule
   &\multicolumn{3}{c}{$\pttt{}~[\rm{GeV}]$}    \\
